syntax = "proto3";
package github.com.hobord.redirect;
option go_package = "redirect";

service RedirectService {
  rpc GetRedirection(GetRedirectionMessage) returns (GetRedirectionResponse) {}
}

message GetRedirectionMessage {
  string sessionID = 1;
  string requestID = 2;
  string url = 3;
  string httpMethod = 4;
  map<string, string> headers = 5;
}

message GetRedirectionResponse {
  string location = 1;
  int32 httpStatusCode = 3;
}


